--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -65,7 +65,7 @@
             href=""
             class="block py-2 pr-4 pl-3 rounded md:bg-transparent text-gray-700 hover:text-red-400 md:p-2"
           >
-            About
+            Dashboard
           </a>
         </li>
         <li>
@@ -73,7 +73,7 @@
             href=""
             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-red-200 md:hover:bg-transparent md:border-0 md:hover:text-red-400 md:p-2"
           >
-            Forum
+            Daftar Event
           </a>
         </li>
         <li>
@@ -81,7 +81,7 @@
             href=""
             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-red-200 md:hover:bg-transparent md:border-0 md:hover:text-red-400 md:p-2"
           >
-            Gatau
+            Enrolled Event
           </a>
         </li>
         <li>
@@ -89,24 +89,7 @@
             href=""
             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-red-200 md:hover:bg-transparent md:border-0 md:hover:text-red-400 md:p-2"
           >
-            Asal
-          </a>
-        </li>
-        <li>
-          <a
-            href=""
-            class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-red-200 md:hover:bg-transparent md:border-0 md:hover:text-red-400 md:p-2"
-          >
-            Dulu
-          </a>
-        </li>
-
-        <li>
-          <a
-            href=""
-            class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-red-200 md:hover:bg-transparent md:border-0 md:hover:text-red-400 md:p-2"
-          >
-            Aja
+            Daftar Sponsor
           </a>
         </li>
         <li>
