--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
     {% csrf_token %}
     <div>
       <p class="text-3xl">LOGIN</p>
-      <p class="text-3xl">BABADU - D-3</p>
+      <p class="text-xl">BABADU - D-3</p>
     </div>
     <div>
       <input
