create UI cru pertandingan

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block meta %}
-<title>Kembangin | Login</title>
+<title>Badminton | Login</title>
 {% endblock meta %} {% block content %}
 <div class="text-center font-bold flex h-screen" id="content">
   <form
