--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block meta %}
-<title>Kembangin | Register</title>
+<title>Badminton | Register</title>
 {% endblock meta %} {% block content %}
 <div class="text-center font-bold h-screen flex" id="content">
   <form
