change meta data

--- a/templates/pertandingan.html
+++ b/templates/pertandingan.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block meta %}
-<title>Badminton | Register</title>
+<title>Badminton | Pertandingan</title>
 {% endblock meta %} {% block content %}
 <div class="max-w-2xl mx-auto my-20">
     <h1>Babak Perempat Final</h1>
