--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -70,7 +70,7 @@
         </li>
         <li>
           <a
-            href=""
+            href="{% url 'atlet:show_daftar_event' %}"
             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-red-200 md:hover:bg-transparent md:border-0 md:hover:text-red-400 md:p-2"
           >
             Daftar Event
@@ -78,7 +78,7 @@
         </li>
         <li>
           <a
-            href=""
+            href="{% url 'atlet:show_enrolled_event' %}"
             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-red-200 md:hover:bg-transparent md:border-0 md:hover:text-red-400 md:p-2"
           >
             Enrolled Event
@@ -86,7 +86,7 @@
         </li>
         <li>
           <a
-            href=""
+            href="{% url 'atlet:show_daftar_sponsor' %}"
             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-red-200 md:hover:bg-transparent md:border-0 md:hover:text-red-400 md:p-2"
           >
             Daftar Sponsor
