--- a/templates/r_hasil_pertandingan_umpire.html
+++ b/templates/r_hasil_pertandingan_umpire.html
@@ -1,28 +1,33 @@
+{% extends "base.html" %}
+
+{% block meta %}
+<title>Badminton | R LIST HASIL PERTANDINGAN</title>
+{% endblock meta %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Hasil Pertandingan</title>
 	<style>
-		.container {
-			max-width: 800px;
-			margin: auto;
-			padding: 20px;
-			box-sizing: border-box;
-			font-family: Arial, sans-serif;
-		}
-
 		h1 {
 			text-align: center;
 			margin-bottom: 30px;
+			font-size: 4rem;
+			font-weight: bold;
 		}
 
 		table {
 			border-collapse: collapse;
 			width: 100%;
+			margin-top: 10px;
 		}
 
-		table th, table td {
-			padding: 10px;
+		table th,
+		table td {
+			padding: 1rem;
 			border: 1px solid #ccc;
 			text-align: center;
 		}
@@ -30,12 +35,15 @@
 		table th {
 			background-color: #f2f2f2;
 			font-weight: bold;
+			font-size: 1.2rem;
 		}
 	</style>
 </head>
+
 <body>
 	<div class="container">
-		<h1>HASIL PERTANDINGAN [Nama Event]</h1>
+		<h1 class="text-center font-bold text-4xl my-10">HASIL PERTANDINGAN [Nama Event]</h1>
+
 		<table>
 			<tr>
 				<th>Nama Event</th>
@@ -66,7 +74,7 @@
 				<td>[isi kapasitas]</td>
 			</tr>
 		</table>
-		<table>
+		<table style="margin-top: 10px;">
 			<tr>
 				<th>Tahap</th>
 				<th>Nama Tim</th>
@@ -110,4 +118,6 @@
 		</table>
 	</div>
 </body>
+
 </html>
+{% endblock content %}
