--- a/templates/register_umpire.html
+++ b/templates/register_umpire.html
@@ -1,67 +1,33 @@
+{% extends "base.html" %} {% block meta %}
+<title>Badminton | Register Umpire</title>
+{% endblock meta %} {% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Form Registrasi Umpire</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-    }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    }
-    h1 {
-      text-align: center;
-    }
-    label {
-      display: block;
-      margin-bottom: 10px;
-    }
-    input[type="text"],
-    input[type="email"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-    }
-    input[type="submit"] {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: #fff;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-    }
-    input[type="submit"]:hover {
-      background-color: #3e8e41;
-    }
-  </style>
+
 </head>
 <body>
   <div class="container">
-    <h1>Form Registrasi Umpire</h1>
-    <form action="" method="post">
-      <label for="nama">Nama:</label>
-      <input type="text" id="nama" name="nama" required>
+    <h1 class="text-center font-bold text-4xl my-10">Form Registrasi Umpire</h1>
+    <div class="grid grid-cols-1 gap-5 bg-white rounded-lg shadow-md p-5 m-auto">
+      <form class="flex flex-col justify-center" action="" method="post">
+        <label for="nama" class="block font-bold mb-2">Nama:</label>
+        <input type="text" id="nama" name="nama" required class="w-full py-2 px-4 mb-5 border border-gray-300 rounded-lg">
+      
+        <label for="email" class="block font-bold mb-2">Email:</label>
+        <input type="email" id="email" name="email" required class="w-full py-2 px-4 mb-5 border border-gray-300 rounded-lg">
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+        <label for="negara" class="block font-bold mb-2">Negara:</label>
+        <input type="text" id="negara" name="negara" required class="w-full py-2 px-4 mb-5 border border-gray-300 rounded-lg">
 
-      <label for="negara">Negara:</label>
-      <input type="text" id="negara" name="negara" required>
-
-      <input type="submit" value="Daftar">
-    </form>
+        <input type="submit" value="Daftar" class="bg-red-400 text-white rounded-lg py-2 px-4 cursor-pointer transition duration-300 hover:bg-red-500">
+      </form>
+    </div>
   </div>
 </body>
+</html>
+
+{% endblock content %}
