redirect pilih partai_kompetisi to pertandingan

--- a/umpire/templates/pilih_kategori_umpire.html
+++ b/umpire/templates/pilih_kategori_umpire.html
@@ -70,7 +70,7 @@
                     </th>
                     <td class="px-6 py-4 font-medium">
                         <div class="bg-red-400 text-white rounded-lg pl-3 md:pl-2 p-2 text-center">
-                            <a href="{% url 'atlet:show_enrolled_event' %}">Pilih</a>
+                            <a href="{% url 'umpire:event_data' %}">Mulai</a>
                         </div>
                     </td>
                 </tr>
@@ -80,7 +80,7 @@
                     </th>
                     <td class="px-6 py-4 font-medium">
                         <div class="bg-red-400 text-white rounded-lg pl-3 md:pl-2 p-2 text-center">
-                            <a href="{% url 'atlet:show_enrolled_event' %}">Pilih</a>
+                            <a href="{% url 'umpire:event_data' %}">Mulai</a>
                         </div>
                     </td>
                 </tr>
@@ -90,7 +90,7 @@
                     </th>
                     <td class="px-6 py-4 font-medium">
                         <div class="bg-red-400 text-white rounded-lg pl-3 md:pl-2 p-2 text-center">
-                            <a href="{% url 'atlet:show_enrolled_event' %}">Pilih</a>
+                            <a href="{% url 'umpire:event_data' %}">Mulai</a>
                         </div>
                     </td>
                 </tr>
@@ -101,7 +101,7 @@
                     </th>
                     <td class="px-6 py-4 font-medium">
                         <div class="bg-red-400 text-white rounded-lg pl-3 md:pl-2 p-2 text-center">
-                            <a href="{% url 'atlet:show_enrolled_event' %}">Pilih</a>
+                            <a href="{% url 'umpire:event_data' %}">Mulai</a>
                         </div>
                     </td>
                 </tr>
@@ -111,7 +111,7 @@
                     </th>
                     <td class="px-6 py-4 font-medium">
                         <div class="bg-red-400 text-white rounded-lg pl-3 md:pl-2 p-2 text-center">
-                            <a href="{% url 'atlet:show_enrolled_event' %}">Pilih</a>
+                            <a href="{% url 'umpire:event_data' %}">Mulai</a>
                         </div>
                     </td>
                 </tr>
@@ -121,7 +121,7 @@
                     </th>
                     <td class="px-6 py-4 font-medium">
                         <div class="bg-red-400 text-white rounded-lg pl-3 md:pl-2 p-2 text-center">
-                            <a href="{% url 'atlet:show_enrolled_event' %}">Pilih</a>
+                            <a href="{% url 'umpire:event_data' %}">Mulai</a>
                         </div>
                     </td>
                 </tr>
