display nama tim in pertandingan

--- a/umpire/templates/pilih_event_umpire.html
+++ b/umpire/templates/pilih_event_umpire.html
@@ -43,7 +43,7 @@
                 </td>
                 <td class="px-6 py-4 font-medium">
                     <div class="bg-red-400 text-white rounded-lg pl-3 md:pl-2 p-2 text-center">
-                        <a href="{% url 'partai_kompetisi' event_name='All England Open'%}">Pilih</a>
+                        <a href="{% url 'umpire:partai_kompetisi' event_name='All England Open'%}">Pilih</a>
                     </div>
               </td>
             </tr>
