--- a/umpire/templates/pertandingan_umpire.html
+++ b/umpire/templates/pertandingan_umpire.html
@@ -79,12 +79,7 @@
 
         // Function to convert the skorTim value into a number
         function convertSkorValue(value) {
-            const skorRegex = /[-+]\s*(\d+)/;
-            const matches = value.match(skorRegex);
-            if (matches && matches.length > 1) {
-                return parseInt(matches[1]);
-            }
-            return 0; // Default value if the conversion fails
+            return value.split(' ')[1];
         }
 
         // Function to convert duration to minutes
@@ -108,7 +103,7 @@
 
 
         // Function to send data to the server
-        function sendData(stopwatch, tim1, tim2, skorTim1, skorTim2) {
+        function sendDataPesertaGame(stopwatch, noGame, tim1, tim2, skorTim1, skorTim2) {
             // Make an AJAX request to the server
             // Replace `YOUR_SERVER_ENDPOINT` with the actual endpoint URL
             // Include any necessary data in the request body or query parameters
@@ -118,6 +113,7 @@
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
+                    noGame: noGame,
                     stopwatch: stopwatch,
                     tim1: tim1,
                     tim2: tim2,
@@ -128,7 +124,7 @@
                 .then(response => {
                     // Handle the response from the server
                     // You can add any necessary logic here
-                    console.log('Data sent successfully!');
+                    console.log('Data skor sent successfully!');
                 })
                 .catch(error => {
                     // Handle any errors that occurred during the request
@@ -136,40 +132,77 @@
                 });
         }
 
-        // Get the next button element
-        const nextButton = document.getElementById('nextButton');
+        function sendDataGame(stopwatch, noGame, jenis_babak, tanggal, waktu_mulai) {
+            fetch('http://localhost:8000/umpire/event-data/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    stopwatch: stopwatch,
+                    noGame: index,
+                    Jenis_Babak: Jenis_Babak,
+                    Tanggal: Tanggal,
+                    Waktu_Mulai: Waktu_Mulai
+                })
+            })
+                .then(response => {
+                    // Handle the response from the server
+                    // You can add any necessary logic here
+                    console.log('Data game sent successfully!');
+                })
+                .catch(error => {
+                    // Handle any errors that occurred during the request
+                    console.error('Error sending data:', error);
+                });
+        }
+
+        // // Get the next button element
+        // const nextButton = document.getElementById('nextButton');
 
         // Add event listener to the next button
-        nextButton.addEventListener('click', () => {
-            // Get the stopwatch value
-            const stopwatchElement = document.getElementById('stopwatch');
-            const stopwatchValue = stopwatchElement.textContent;
+        // nextButton.addEventListener('click', () => {
+        //     // Get the stopwatch value
+        //     const stopwatchElement = document.getElementById('stopwatch');
+        //     const stopwatchValue = stopwatchElement.textContent;
 
-            // Get the values from the table cells
-            const tableRows = document.querySelectorAll('tbody tr');
+        //     // Get the values from the table cells
+        //     const tableRows = document.querySelectorAll('tbody tr');
 
-            const data = [];
+        //     const dataPesertaGame = [];
+        //     const dataGame = [];
 
-            tableRows.forEach(row => {
-                const cells = row.getElementsByTagName('td');
-                const tim1 = cells[0].textContent.trim();
-                const tim2 = cells[1].textContent.trim();
-                const skorTim1 = cells[2].textContent.trim();
-                const skorTim2 = cells[3].textContent.trim();
-                const skorTim1Value = convertSkorValue(skorTim1);
-                const skorTim2Value = convertSkorValue(skorTim2);
+        //     tableRows.forEach((row, index) => {
+        //         const cells = row.getElementsByTagName('td');
+        //         const tim1 = cells[0].textContent.trim();
+        //         const tim2 = cells[1].textContent.trim();
+        //         const skorTim1 = cells[2].textContent.trim();
+        //         const skorTim2 = cells[3].textContent.trim();
+        //         const skorTim1Value = convertSkorValue(skorTim1);
+        //         const skorTim2Value = convertSkorValue(skorTim2);
 
-                data.push({
-                    tim1: tim1,
-                    tim2: tim2,
-                    skorTim1: skorTim1Value,
-                    skorTim2: skorTim2Value
-                });
-            });
+        //         var data = {
+        //             "noGame": index,
+        //             "Jenis_Babak": "{{ babak }}",
+        //             "Tanggal": "{{ tanggal }}",
+        //             "Waktu_Mulai": '{{ starting_time }}'
+        //         };
 
-            // Send the data to the server
-            sendData(convertDurationToMinutes(stopwatchValue), data);
-        });
+        //         dataGame.push(data);
+
+        //         dataPesertaGame.push({
+        //             noGame: index,
+        //             tim1: tim1,
+        //             tim2: tim2,
+        //             skorTim1: skorTim1Value,
+        //             skorTim2: skorTim2Value
+        //         });
+        //     });
+        //     sendDataGame(convertDurationToMinutes(stopwatchValue), dataGame)
+
+        //     // Send the data to the server
+        //     sendDataPesertaGame(convertDurationToMinutes(stopwatchValue), dataPesertaGame);
+        // });
 
         document.getElementById('nextButton').addEventListener('click', function () {
             const stopwatchElement = document.getElementById('stopwatch');
@@ -209,34 +242,81 @@
         document.getElementById('nextButton').addEventListener('click', function () {
             const stopwatchElement = document.getElementById('stopwatch');
             const stopwatchValue = stopwatchElement.textContent;
-            var data = {
-                "No_Game": 100,
-                "Durasi": Math.floor(convertDurationToMinutes(stopwatchValue) / 60),
-                "Jenis_Babak": "{{ babak }}",
-                "Tanggal": "{{ starting_time }}",
-                "Waktu_Mulai": '{{ starting_time }}'
-            };
+            const tableRows = document.querySelectorAll('tbody tr');
 
-            var formBody = [];
-            for (var property in data) {
-                var encodedKey = encodeURIComponent(property);
-                var encodedValue = encodeURIComponent(data[property]);
-                formBody.push(encodedKey + "=" + encodedValue);
-            }
-            formBody = formBody.join("&");
+            tableRows.forEach((row, index) => {
+                console.log("index: " + index)
+                const cells = row.getElementsByTagName('td');
+                const tim1 = cells[0].textContent.trim();
+                const tim2 = cells[1].textContent.trim();
+                const skorTim1 = cells[2].textContent.trim();
+                const skorTim2 = cells[3].textContent.trim();
+                const skorTim1Value = convertSkorValue(skorTim1);
+                const skorTim2Value = convertSkorValue(skorTim2);
+                console.log("tim1: " + tim1)
+                console.log("tim2: " + tim2)
+                console.log("skorTim1: " + skorTim1Value)
+                console.log("skorTim2: " + skorTim2Value)
 
-            fetch('/your-endpoint-url', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8'
-                },
-                body: formBody
-            })
-                .then(response => response.json())
-                .then(data => console.log(data))
-                .catch((error) => {
-                    console.error('Error:', error);
-                });
+                var dataGame = {
+                    "noGame": index,
+                    "Durasi": Math.floor(convertDurationToMinutes(stopwatchValue) / 60),
+                    "Jenis_Babak": "{{ babak }}",
+                    "Tanggal": "{{ tanggal }}",
+                    "Waktu_Mulai": '{{ starting_time }}'
+                };
+
+
+                var formBody = [];
+                for (var property in dataGame) {
+                    var encodedKey = encodeURIComponent(property);
+                    var encodedValue = encodeURIComponent(dataGame[property]);
+                    formBody.push(encodedKey + "=" + encodedValue);
+                }
+                formBody = formBody.join("&");
+
+                fetch('/your-endpoint-url', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8'
+                    },
+                    body: formBody
+                })
+                    .then(response => response.json())
+                    .then(data => console.log(data))
+                    .catch((error) => {
+                        console.error('Error:', error);
+                    });
+
+                var dataPesertaGame = {
+                    "noGame": index.toString(),
+                    "Tim1": tim1.toString(),
+                    "Tim2": tim2.toString(),
+                    "SkorTim1": skorTim1Value,
+                    "SkorTim2": skorTim2Value
+                };
+
+                var formBody = [];
+                for (var property in dataPesertaGame) {
+                    var encodedKey = encodeURIComponent(property);
+                    var encodedValue = encodeURIComponent(dataPesertaGame[property]);
+                    formBody.push(encodedKey + "=" + encodedValue);
+                }
+                formBody = formBody.join("&");
+
+                fetch('/your-endpoint-url', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8'
+                    },
+                    body: formBody
+                })
+                    .then(response => response.json())
+                    .then(data => console.log(data))
+                    .catch((error) => {
+                        console.error('Error:', error);
+                    });
+            });
         });
     });
 </script>
